fix main export

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jest-fs-mock",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "eslint": "eslint src",
     "prettier": "prettier src --write",
